apps/code-server/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: codercom/code-server:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: code-server-pvc
              mountPath: /home/coder
            - name: nix
              mountPath: /nix
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 2048Mi
      volumes:
        - name: code-server-pvc
          persistentVolumeClaim:
            claimName: code-server-pvc
        - name: nix
          persistentVolumeClaim:
            claimName: code-server-nix-pvc
