apps/code-server/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - code-server.k8s.integratn.tech
      secretName: code-server-tls
  rules:
    - host: code-server.k8s.integratn.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: code-server
                port:
                  number: 8080
